<resources>
    <string name="app_name">BuscoK-sa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>

    <!-- MENU -->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_ingresar">Ingresar</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_terminos_y_condiciones">Térmicos y condiciones</string>
    <string name="menu_ayuda">Ayuda</string>

    <!-- FACEBOOK VARS -->
    <string name="facebook_app_id">746014209068074</string>
    <string name="fb_login_protocol_scheme">fb746014209068074</string>
    <string name="salir">Salir</string>

</resources>
